apps/vaultwarden/vaultwarden-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: localhost:32000/vaultwarden
          ports:
            - name: vaultwarden
              containerPort: 3000
          volumeMounts:
            - name: vaultwarden
              subPath: data
              mountPath: /data/
          livenessProbe:
            httpGet:
              path: /alive
              port: vaultwarden
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /alive
              port: vaultwarden
              scheme: HTTP
      volumes:
        - name: vaultwarden
          persistentVolumeClaim:
            claimName: vaultwarden
