apps/vaultwarden/vaultwarden-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: vaultwarden
      port: 3000
      targetPort: 3000
