apps/vaultwarden/vaultwarden-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ext
  labels:
    type: external
spec:
  tls:
    - hosts:
        - vault.{hostname}
      secretName: vaultwarden.ing.cert
  rules:
    - host: vault.{hostname}
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 3000
            path: /
            pathType: Prefix
